@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,9 +30,8 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
-import javax.annotation.PostConstruct;
-import javax.inject.Inject;
-
+import jakarta.annotation.PostConstruct;
+import jakarta.inject.Inject;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -67,7 +66,6 @@ import org.springframework.scheduling.annotation.Async;
 import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.stereotype.Component;
 import org.springframework.util.Assert;
-import org.springframework.util.concurrent.SettableListenableFuture;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.validation.beanvalidation.MethodValidationPostProcessor;
 
@@ -79,7 +77,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
  * @author Stephane Nicoll
  * @author Juergen Hoeller
  */
-public class AnnotationDrivenEventListenerTests {
+class AnnotationDrivenEventListenerTests {
 
 	private ConfigurableApplicationContext context;
 
@@ -97,7 +95,7 @@ public class AnnotationDrivenEventListenerTests {
 
 
 	@Test
-	public void simpleEventJavaConfig() {
+	void simpleEventJavaConfig() {
 		load(TestEventListener.class);
 		TestEvent event = new TestEvent(this, "test");
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
@@ -120,7 +118,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void simpleEventXmlConfig() {
+	void simpleEventXmlConfig() {
 		this.context = new ClassPathXmlApplicationContext(
 				"org/springframework/context/event/simple-event-configuration.xml");
 
@@ -141,7 +139,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void metaAnnotationIsDiscovered() {
+	void metaAnnotationIsDiscovered() {
 		load(MetaAnnotationListenerTestBean.class);
 		MetaAnnotationListenerTestBean bean = this.context.getBean(MetaAnnotationListenerTestBean.class);
 		this.eventCollector.assertNoEventReceived(bean);
@@ -159,7 +157,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void contextEventsAreReceived() {
+	void contextEventsAreReceived() {
 		load(ContextEventListener.class);
 		ContextEventListener listener = this.context.getBean(ContextEventListener.class);
 
@@ -175,7 +173,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void methodSignatureNoEvent() {
+	void methodSignatureNoEvent() {
 		@SuppressWarnings("resource")
 		AnnotationConfigApplicationContext failingContext =
 				new AnnotationConfigApplicationContext();
@@ -189,7 +187,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void simpleReply() {
+	void simpleReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "dummy");
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -204,7 +202,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void nullReplyIgnored() {
+	void nullReplyIgnored() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, null); // No response
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -219,7 +217,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void arrayReply() {
+	void arrayReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, new String[]{"first", "second"});
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -234,7 +232,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void collectionReply() {
+	void collectionReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		Set<Object> replies = new LinkedHashSet<>();
 		replies.add("first");
@@ -253,7 +251,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void collectionReplyNullValue() {
+	void collectionReplyNullValue() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, Arrays.asList(null, "test"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -268,9 +266,11 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenableFutureReply() {
+	@SuppressWarnings("deprecation")
+	void listenableFutureReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
-		SettableListenableFuture<String> future = new SettableListenableFuture<>();
+		org.springframework.util.concurrent.SettableListenableFuture<String> future =
+				new org.springframework.util.concurrent.SettableListenableFuture<>();
 		future.set("dummy");
 		AnotherTestEvent event = new AnotherTestEvent(this, future);
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -285,7 +285,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void completableFutureReply() {
+	void completableFutureReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, CompletableFuture.completedFuture("dummy"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -300,7 +300,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void monoReply() {
+	void monoReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, Mono.just("dummy"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -315,7 +315,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void fluxReply() {
+	void fluxReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, Flux.just("dummy1", "dummy2"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -330,7 +330,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithSimpleInterfaceProxy() {
+	void eventListenerWorksWithSimpleInterfaceProxy() {
 		load(ScopedProxyTestBean.class);
 
 		SimpleService proxy = this.context.getBean(SimpleService.class);
@@ -347,7 +347,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithAnnotatedInterfaceProxy() {
+	void eventListenerWorksWithAnnotatedInterfaceProxy() {
 		load(AnnotatedProxyTestBean.class);
 
 		AnnotatedSimpleService proxy = this.context.getBean(AnnotatedSimpleService.class);
@@ -364,7 +364,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithCglibProxy() {
+	void eventListenerWorksWithCglibProxy() {
 		load(CglibProxyTestBean.class);
 
 		CglibProxyTestBean proxy = this.context.getBean(CglibProxyTestBean.class);
@@ -381,14 +381,14 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void privateMethodOnCglibProxyFails() {
+	void privateMethodOnCglibProxyFails() {
 		assertThatExceptionOfType(BeanInitializationException.class).isThrownBy(() ->
 				load(CglibProxyWithPrivateMethod.class))
 			.withCauseInstanceOf(IllegalStateException.class);
 	}
 
 	@Test
-	public void eventListenerWorksWithCustomScope() {
+	void eventListenerWorksWithCustomScope() {
 		load(CustomScopeTestBean.class);
 		CustomScope customScope = new CustomScope();
 		this.context.getBeanFactory().registerScope("custom", customScope);
@@ -417,7 +417,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void asyncProcessingApplied() throws InterruptedException {
+	void asyncProcessingApplied() throws InterruptedException {
 		loadAsync(AsyncEventListener.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -432,7 +432,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void asyncProcessingAppliedWithInterfaceProxy() throws InterruptedException {
+	void asyncProcessingAppliedWithInterfaceProxy() throws InterruptedException {
 		doLoad(AsyncConfigurationWithInterfaces.class, SimpleProxyTestBean.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -447,7 +447,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void asyncProcessingAppliedWithScopedProxy() throws InterruptedException {
+	void asyncProcessingAppliedWithScopedProxy() throws InterruptedException {
 		doLoad(AsyncConfigurationWithInterfaces.class, ScopedProxyTestBean.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -462,7 +462,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void exceptionPropagated() {
+	void exceptionPropagated() {
 		load(ExceptionEventListener.class);
 		TestEvent event = new TestEvent(this, "fail");
 		ExceptionEventListener listener = this.context.getBean(ExceptionEventListener.class);
@@ -475,7 +475,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void exceptionNotPropagatedWithAsync() throws InterruptedException {
+	void exceptionNotPropagatedWithAsync() throws InterruptedException {
 		loadAsync(ExceptionEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "fail");
 		ExceptionEventListener listener = this.context.getBean(ExceptionEventListener.class);
@@ -489,7 +489,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithSimplePayload() {
+	void listenerWithSimplePayload() {
 		load(TestEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 
@@ -500,7 +500,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithNonMatchingPayload() {
+	void listenerWithNonMatchingPayload() {
 		load(TestEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 
@@ -511,7 +511,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void replyWithPayload() {
+	void replyWithPayload() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "String");
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -527,7 +527,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithGenericApplicationEvent() {
+	void listenerWithGenericApplicationEvent() {
 		load(GenericEventListener.class);
 		GenericEventListener listener = this.context.getBean(GenericEventListener.class);
 
@@ -538,7 +538,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithResolvableTypeEvent() {
+	void listenerWithResolvableTypeEvent() {
 		load(ResolvableTypeEventListener.class);
 		ResolvableTypeEventListener listener = this.context.getBean(ResolvableTypeEventListener.class);
 
@@ -550,7 +550,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithResolvableTypeEventWrongGeneric() {
+	void listenerWithResolvableTypeEventWrongGeneric() {
 		load(ResolvableTypeEventListener.class);
 		ResolvableTypeEventListener listener = this.context.getBean(ResolvableTypeEventListener.class);
 
@@ -562,12 +562,12 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void conditionMatch() {
+	void conditionMatch() {
 		validateConditionMatch(ConditionalEventListener.class);
 	}
 
 	@Test
-	public void conditionMatchWithProxy() {
+	void conditionMatchWithProxy() {
 		validateConditionMatch(ConditionalEventListener.class, MethodValidationPostProcessor.class);
 	}
 
@@ -600,7 +600,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void conditionDoesNotMatch() {
+	void conditionDoesNotMatch() {
 		long maxLong = Long.MAX_VALUE;
 		load(ConditionalEventListener.class);
 		TestEvent event = new TestEvent(this, "KO");
@@ -625,7 +625,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void orderedListeners() {
+	void orderedListeners() {
 		load(OrderedTestListener.class);
 		OrderedTestListener listener = this.context.getBean(OrderedTestListener.class);
 
@@ -635,7 +635,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test @Disabled  // SPR-15122
-	public void listenersReceiveEarlyEvents() {
+	void listenersReceiveEarlyEvents() {
 		load(EventOnPostConstruct.class, OrderedTestListener.class);
 		OrderedTestListener listener = this.context.getBean(OrderedTestListener.class);
 
@@ -643,7 +643,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void missingListenerBeanIgnored() {
+	void missingListenerBeanIgnored() {
 		load(MissingEventListener.class);
 		context.getBean(UseMissingEventListener.class);
 		context.getBean(ApplicationEventMulticaster.class).multicastEvent(new TestEvent(this));
@@ -697,7 +697,7 @@ public class AnnotationDrivenEventListenerTests {
 		static class TestConditionEvaluator {
 
 			public boolean valid(Double ratio) {
-				return new Double(42).equals(ratio);
+				return Double.valueOf(42).equals(ratio);
 			}
 		}
 	}
@@ -775,8 +775,7 @@ public class AnnotationDrivenEventListenerTests {
 			if (event.content == null) {
 				return null;
 			}
-			else if (event.content instanceof String) {
-				String s = (String) event.content;
+			else if (event.content instanceof String s) {
 				if (s.equals("String")) {
 					return event.content;
 				}
