@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -89,20 +89,20 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 	 * {@link Namespace} in which {@code @Autowired} validation error messages
 	 * are stored, keyed by test class.
 	 */
-	private static final Namespace AUTOWIRED_VALIDATION_NAMESPACE = Namespace.create(SpringExtension.class.getName() +
-			"#autowired.validation");
+	private static final Namespace AUTOWIRED_VALIDATION_NAMESPACE =
+			Namespace.create(SpringExtension.class.getName() + "#autowired.validation");
 
 	private static final String NO_AUTOWIRED_VIOLATIONS_DETECTED = "NO AUTOWIRED VIOLATIONS DETECTED";
 
 	// Note that @Test, @TestFactory, @TestTemplate, @RepeatedTest, and @ParameterizedTest
 	// are all meta-annotated with @Testable.
 	private static final List<Class<? extends Annotation>> JUPITER_ANNOTATION_TYPES =
-			Arrays.asList(BeforeAll.class, AfterAll.class, BeforeEach.class, AfterEach.class, Testable.class);
+			List.of(BeforeAll.class, AfterAll.class, BeforeEach.class, AfterEach.class, Testable.class);
 
 	private static final MethodFilter autowiredTestOrLifecycleMethodFilter =
 			ReflectionUtils.USER_DECLARED_METHODS
-				.and(method -> !Modifier.isPrivate(method.getModifiers()))
-				.and(SpringExtension::isAutowiredTestOrLifecycleMethod);
+					.and(method -> !Modifier.isPrivate(method.getModifiers()))
+					.and(SpringExtension::isAutowiredTestOrLifecycleMethod);
 
 
 	/**
@@ -147,16 +147,16 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 		// We save the result in the ExtensionContext.Store so that we don't
 		// re-validate all methods for the same test class multiple times.
 		Store store = context.getStore(AUTOWIRED_VALIDATION_NAMESPACE);
-		String errorMessage = store.getOrComputeIfAbsent(context.getRequiredTestClass(),
-			testClass -> {
+
+		String errorMessage = store.getOrComputeIfAbsent(context.getRequiredTestClass(), testClass -> {
 				Method[] methodsWithErrors =
 						ReflectionUtils.getUniqueDeclaredMethods(testClass, autowiredTestOrLifecycleMethodFilter);
 				return (methodsWithErrors.length == 0 ? NO_AUTOWIRED_VIOLATIONS_DETECTED :
 						String.format(
-							"Test methods and test lifecycle methods must not be annotated with @Autowired. " +
-							"You should instead annotate individual method parameters with @Autowired, " +
-							"@Qualifier, or @Value. Offending methods in test class %s: %s",
-							testClass.getName(), Arrays.toString(methodsWithErrors)));
+								"Test methods and test lifecycle methods must not be annotated with @Autowired. " +
+								"You should instead annotate individual method parameters with @Autowired, " +
+								"@Qualifier, or @Value. Offending methods in test class %s: %s",
+								testClass.getName(), Arrays.toString(methodsWithErrors)));
 			}, String.class);
 
 		if (errorMessage != NO_AUTOWIRED_VIOLATIONS_DETECTED) {
@@ -247,7 +247,7 @@ public class SpringExtension implements BeforeAllCallback, AfterAllCallback, Tes
 	private boolean supportsApplicationEvents(ParameterContext parameterContext) {
 		if (ApplicationEvents.class.isAssignableFrom(parameterContext.getParameter().getType())) {
 			Assert.isTrue(parameterContext.getDeclaringExecutable() instanceof Method,
-				"ApplicationEvents can only be injected into test and lifecycle methods");
+					"ApplicationEvents can only be injected into test and lifecycle methods");
 			return true;
 		}
 		return false;
