@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.springframework.http.codec.json;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -39,6 +38,7 @@ import org.springframework.core.ResolvableType;
 import org.springframework.core.codec.Hints;
 import org.springframework.http.HttpLogging;
 import org.springframework.http.MediaType;
+import org.springframework.http.ProblemDetail;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.lang.Nullable;
@@ -75,11 +75,10 @@ public abstract class Jackson2CodecSupport {
 	private static final String JSON_VIEW_HINT_ERROR =
 			"@JsonView only supported for write hints with exactly 1 class argument: ";
 
-	private static final List<MimeType> DEFAULT_MIME_TYPES = Collections.unmodifiableList(
-			Arrays.asList(
-					MediaType.APPLICATION_JSON,
-					new MediaType("application", "*+json"),
-					MediaType.APPLICATION_NDJSON));
+	private static final List<MimeType> DEFAULT_MIME_TYPES = List.of(
+			MediaType.APPLICATION_JSON,
+			new MediaType("application", "*+json"),
+			MediaType.APPLICATION_NDJSON);
 
 
 	protected final Log logger = HttpLogging.forLogName(getClass());
@@ -91,6 +90,8 @@ public abstract class Jackson2CodecSupport {
 
 	private final List<MimeType> mimeTypes;
 
+	private final List<MimeType> problemDetailMimeTypes;
+
 
 	/**
 	 * Constructor with a Jackson {@link ObjectMapper} to use.
@@ -98,8 +99,15 @@ public abstract class Jackson2CodecSupport {
 	protected Jackson2CodecSupport(ObjectMapper objectMapper, MimeType... mimeTypes) {
 		Assert.notNull(objectMapper, "ObjectMapper must not be null");
 		this.defaultObjectMapper = objectMapper;
-		this.mimeTypes = !ObjectUtils.isEmpty(mimeTypes) ?
-				Collections.unmodifiableList(Arrays.asList(mimeTypes)) : DEFAULT_MIME_TYPES;
+		this.mimeTypes = (!ObjectUtils.isEmpty(mimeTypes) ? List.of(mimeTypes) : DEFAULT_MIME_TYPES);
+		this.problemDetailMimeTypes = initProblemDetailMediaTypes(this.mimeTypes);
+	}
+
+	private static List<MimeType> initProblemDetailMediaTypes(List<MimeType> supportedMimeTypes) {
+		List<MimeType> mimeTypes = new ArrayList<>();
+		mimeTypes.add(MediaType.APPLICATION_PROBLEM_JSON);
+		mimeTypes.addAll(supportedMimeTypes);
+		return Collections.unmodifiableList(mimeTypes);
 	}
 
 
@@ -182,7 +190,10 @@ public abstract class Jackson2CodecSupport {
 				result.addAll(entry.getValue().keySet());
 			}
 		}
-		return (CollectionUtils.isEmpty(result) ? getMimeTypes() : result);
+		if (!CollectionUtils.isEmpty(result)) {
+			return result;
+		}
+		return (ProblemDetail.class.isAssignableFrom(elementClass) ? this.problemDetailMimeTypes : getMimeTypes());
 	}
 
 	protected boolean supportsMimeType(@Nullable MimeType mimeType) {
