@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,9 +19,8 @@ package org.springframework.web.context.request;
 import java.io.Serializable;
 import java.math.BigInteger;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpSession;
-
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpSession;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
@@ -51,13 +50,13 @@ public class ServletRequestAttributesTests {
 
 
 	@Test
-	public void ctorRejectsNullArg() throws Exception {
+	public void ctorRejectsNullArg() {
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				new ServletRequestAttributes(null));
 	}
 
 	@Test
-	public void setRequestScopedAttribute() throws Exception {
+	public void setRequestScopedAttribute() {
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_REQUEST);
@@ -66,7 +65,7 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void setRequestScopedAttributeAfterCompletion() throws Exception {
+	public void setRequestScopedAttributeAfterCompletion() {
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		request.close();
@@ -75,7 +74,7 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void setSessionScopedAttribute() throws Exception {
+	public void setSessionScopedAttribute() {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
@@ -86,7 +85,7 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void setSessionScopedAttributeAfterCompletion() throws Exception {
+	public void setSessionScopedAttributeAfterCompletion() {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
@@ -100,7 +99,7 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void getSessionScopedAttributeDoesNotForceCreationOfSession() throws Exception {
+	public void getSessionScopedAttributeDoesNotForceCreationOfSession() {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
@@ -110,7 +109,7 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void removeSessionScopedAttribute() throws Exception {
+	public void removeSessionScopedAttribute() {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
@@ -122,7 +121,7 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void removeSessionScopedAttributeDoesNotForceCreationOfSession() throws Exception {
+	public void removeSessionScopedAttributeDoesNotForceCreationOfSession() {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
@@ -131,7 +130,7 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void updateAccessedAttributes() throws Exception {
+	public void updateAccessedAttributes() {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 		HttpSession session = mock(HttpSession.class);
 		given(request.getSession(anyBoolean())).willReturn(session);
@@ -153,7 +152,7 @@ public class ServletRequestAttributesTests {
 
 	@Test
 	public void skipImmutableCharacter() {
-		doSkipImmutableValue(new Character('x'));
+		doSkipImmutableValue(Character.valueOf('x'));
 	}
 
 	@Test
