@@ -23,7 +23,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import org.springframework.http.MediaType;
 import org.springframework.lang.Nullable;
@@ -88,7 +87,7 @@ public class RequestedContentTypeResolverBuilder {
 	 */
 	public RequestedContentTypeResolver build() {
 		List<RequestedContentTypeResolver> resolvers = (!this.candidates.isEmpty() ?
-				this.candidates.stream().map(Supplier::get).collect(Collectors.toList()) :
+				this.candidates.stream().map(Supplier::get).toList() :
 				Collections.singletonList(new HeaderContentTypeResolver()));
 
 		return exchange -> {
